--- a/css/index.css
+++ b/css/index.css
@@ -45,9 +45,9 @@ header nav .navsection-logo {
 }
 
 header nav .navsection-links ul li a:hover {
-  color: red;
+  /* color: red;
   background-color: #e9e9e9;
-  border-top: 2px solid gray;
+  border-top: 2px solid gray; */
   border-bottom: 2px solid gray;
 }
 
