--- a/css/index.css
+++ b/css/index.css
@@ -45,10 +45,10 @@ header nav .navsection-logo {
 }
 
 header nav .navsection-links ul li a:hover {
-  /* color: red;
-  background-color: #e9e9e9;
+   color: #ed7268;
+ /* background-color: #e9e9e9;
   border-top: 2px solid gray; */
-  border-bottom: 2px solid gray;
+  border-bottom: 2px solid #ed7268;
 }
 
 .navsection-searchicon {
